[package]
name = "hapi"
version = "0.1.0"
authors = ["Felipe Diniello <felipe.diniello@globant.com>"]
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
postgres = "0.19.0"
toml = "0.5.8"
r2d2_postgres = "0.17.0"
r2d2 = "0.8"
serde = {version = "1.0.118", features = ["derive"] }
serde_json = "1.0"